--- a/views/add.hbs
+++ b/views/add.hbs
@@ -16,5 +16,6 @@
         <label for="img">URL картинки</label>
          <span class="helper-text" data-error="Введите URL картинки">Helper text</span>
     </div>
+    <input type="hidden" name="_csrf" value="{{csrf}}">
     <button class="btn btn-primary">Добавить курс</button>
 </form>
